welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:2: error: type mismatch;
 found   : Int(0)
 required: Boolean
	var x:Boolean=0;
                      ^maxMod5:5: error: type mismatch;
 found   : Int
 required: Boolean
		x=b
                  ^maxMod5:8: error: type mismatch;
 found   : Int
 required: Boolean
		x=a
                  ^maxMod5:12: error: type mismatch;
 found   : Int
 required: Boolean
			x=a
                          ^maxMod5:15: error: type mismatch;
 found   : Int
 required: Boolean
			x=b
                          ^maxMod5:18: error: type mismatch;
 found   : Boolean
 required: Int
	return x
               ^